# ward-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  ROADMAP.md  article_agent_practices.md  pyproject.toml  restart.sh  start.sh
src/ward/: __init__.py  app.py  cli.py
src/ward/agent/: __init__.py  ward_agent.py  ward_tools.py
src/ward/api/: routes.py
src/ward/core/: config.py  data_fetcher.py  data_fetcher_akshare_em.py  data_fetcher_akshare_sina.py
src/ward/mini_agent/: agent.py
src/ward/mini_agent/llm/: anthropic_client.py
src/ward/mini_agent/schema/: __init__.py  schema.py
src/ward/mini_agent/tools/: __init__.py
src/ward/schemas/: models.py
src/ward/services/: chat_service.py  history_service.py  index_service.py  nasdaq_service.py  report_service.py  stock_service.py
src/ward/services/db/: analysis_cache_service.py  conversation_service.py
static/: index.html
static/css/: style.css
static/js/: app.js
